--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <ul class="navigation">
             <li><a href="index.html" id="navigation">Work</a></li>
             <li><a href="about.html" id="navigation">About</a></li>
-            <li><a href="#contact" id="navigation" onclick="myFunction()">Contact</a></li>
-            <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
+            <li><a href="#contact" id="navigation" onclick="menuToggle()">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
       </div>
