edit code quality

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div id="myNavtoggle" class="navtoggle">
         <a href="#" class="logo">Lily Cabot-King</a>
         <nav>
-          <ul class="navigation">
-            <li><a href="index.html" id="navigation">Work</a></li>
-            <li><a href="about.html" id="navigation">About</a></li>
-            <li><a href="#contact" id="navigation" onclick="menuToggle()">Contact</a></li>
+          <ul class="navigation" id="navigation">
+            <li><a href="index.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
@@ -1040,7 +1040,7 @@
     <div class="container">
       <h2> Contact Me </h2>
       <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email? <a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
-      <div class="wrapper">
+      <div class="social">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
             <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
