--- a/qwest.html
+++ b/qwest.html
@@ -19,10 +19,10 @@
       <div id="myNavtoggle" class="navtoggle">
         <a href="#" class="logo">Lily Cabot-King</a>
         <nav>
-          <ul class="navigation">
-            <li><a href="index.html" id="navigation">Work</a></li>
-            <li><a href="about.html" id="navigation">About</a></li>
-            <li><a href="#contact" id="navigation" onclick="menuToggle()">Contact</a></li>
+          <ul class="navigation" id="navigation">
+            <li><a href="index.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
